kubernetes/apps/homelab/longhorn/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations: 
    kubernetes.io/ingress.class: traefik-external 
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.local.samuelcalvert.com`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
          sticky:
            cookie:
              httpOnly: true
              name: longhorn
              secure: true
              sameSite: none
  tls:
    secretName: local-samuelcalvert-com-tls
